# shadowYield

./: .gitignore  Anchor.toml  README.md  circuit-urls.json  offchain-comp-def-offsets.json  package-lock.json  package.json  tsconfig.json
encrypted-ixs/src/: lib.rs
frontend/: .env  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  polyfills.ts  vite-env.d.ts
frontend/src/components/common/: TokenLogo.tsx  (+2 more)
frontend/src/config/: constants.ts  tokens.ts
frontend/src/hooks/: useGhostPool.ts  useMXEStatus.ts  useToast.ts  useTokenBalances.ts
frontend/src/lib/: arcium.ts  format.ts  idl.ts  pdas.ts
frontend/src/mutations/: useDeposit.ts  useWithdraw.ts
frontend/src/pages/: DepositPage.tsx  HomePage.tsx  PortfolioPage.tsx  WithdrawPage.tsx
frontend/src/styles/: globals.css
programs/ghost_pool/: Cargo.toml
programs/ghost_pool/src/: lib.rs
programs/mock_kamino/: Cargo.toml
programs/mock_kamino/src/: lib.rs
scripts/: README.md  check-circuits.ts  check-new-comp-defs.ts  find-kamino-reserves.ts  find-usdc-reserve.ts  init-check-investment-comp-def.ts  init-comp-defs.ts  init-offchain-comp-defs.ts  init-pool-for-frontend.ts  reinit-comp-defs-offchain.ts  test-cipher-consistency.ts  test-deposit-withdraw.ts  test-deposit.ts  test-existing-pool.ts  test-full-flow.ts  test-init-callback.ts  test-kamino-integration.ts  trigger-investment.ts  upload-circuits.ts  upload-to-pinata.ts  verify-deployment.ts  verify-devnet.ts
tests/: ghost-pool-devnet.ts  ghost-pool.ts
(+11 files in other folders)
